--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/cimgui"]
 	path = deps/cimgui
 	url = https://github.com/cimgui/cimgui.git
+[submodule "scripts/sokol-tools-bin"]
+	path = scripts/sokol-tools-bin
+	url = https://github.com/floooh/sokol-tools-bin
